Bug 468002 Really make windbgdlg a Unicode application r=blassey sr=bsmedberg